Contact - Ajout des champs du formulaire

--- a/contact.scss
+++ b/contact.scss
@@ -1,6 +1,42 @@
-div {
-    div {
-        height: 100vh;
+body {
+    background-color: antiquewhite;
+    .formulaire__container {
+        display: flex;
+        justify-content: center;
+        .formulaire {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            width: 40%;
+            height: 40vh;
+            .flexColumn {
+                display: flex;
+                flex-direction: column;
+                #message {
+                    height: 10vh;
+                    resize: none;
+                    border-radius: 12px;
+                    border: 0px;
+                    border-right: 5px solid rgb(248, 164, 55);
+                    border-bottom: 5px solid rgb(248, 164, 55);
+                    padding: 10px;
+                }
+                input {
+                    height: 2.5vh;
+                    border-radius: 12px;
+                    border: 0px;
+                    border-right: 5px solid rgb(248, 164, 55);
+                    border-bottom: 5px solid rgb(248, 164, 55);
+                    padding: 10px;
+                }
+            }
+            .nameFirstnameContainer {
+                display: flex;
+                justify-content: space-between;
+                .fiftyInput {
+                    width: 49%;
+                }
+            }
+        }
     }
-    
 }
