--- a/header.css
+++ b/header.css
@@ -1,9 +1,18 @@
 header {
-  background-color: #4dd9b6;
   position: fixed;
   z-index: 5;
   width: 100%;
-  top: 0;
+  top: 3%;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar {
+  width: 80%;
+  border-radius: 12px;
+  border: 3px solid black;
+  background-color: #ffffff;
+  align-items: center;
 }
 
 body {
@@ -11,7 +20,7 @@ body {
 }
 
 main {
-  margin-top: 74px;
+  margin-top: 15%;
 }
 
 #menu-header {
@@ -19,10 +28,16 @@ main {
   justify-content: space-between;
   align-items: center;
   padding: 10px 60px;
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
 }
 
 .logo {
   margin: 0;
+  display: flex;
+  align-self: center;
 }
 
 .logo img {
@@ -34,16 +49,30 @@ main {
   padding: 0;
   margin: 0;
   list-style: none;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 35%;
 }
 
-.nav-links a {
+.button {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
   font-weight: bold;
-  font-size: 16px;
-  margin-left: 20px;
 }
 
-.nav-links a:hover {
-  color: orange;
-}/*# sourceMappingURL=header.css.map */
+.button:hover {
+  color: #fabc1d;
+}
+
+.cta {
+  background-color: #f15d49;
+  color: #ffffff;
+  padding: 5px 25px;
+  text-decoration: none;
+  border: 3px solid black;
+  border-radius: 12px;
+}
+
+.cta:hover {
+  color: rgb(0, 0, 0);
+}
