--- a/galerie.css
+++ b/galerie.css
@@ -1,10 +1,16 @@
+body {
+  background-color: #fabc1d;
+}
+
 .container-img {
   border-radius: 12px;
+  border: 3px solid black;
   height: 390px;
   position: relative;
   max-width: 250px;
   padding: 0;
   margin-bottom: 3rem;
+  overflow: hidden;
 }
 .container-img p {
   position: absolute;
@@ -26,7 +32,9 @@
 }
 
 .container-img-bis {
+  overflow: hidden;
   position: relative;
+  border: 3px solid black;
   border-radius: 12px;
   height: 390px;
   max-width: 250px;
@@ -53,7 +61,6 @@
   transition: 0.3s ease-in-out;
   transform: scale(1);
   position: relative;
-  border-radius: 12px;
 }
 
 .section-container {
