--- a/header.scss
+++ b/header.scss
@@ -1,47 +1,78 @@
 header {
-    background-color: #4dd9b6; 
     position: fixed;
     z-index: 5;
     width: 100%;
-    top: 0;
-}
-body {
+    top: 3%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .navbar {
+    width: 80%;
+    border-radius: 12px;
+    border: 3px solid black;
+    background-color: #ffffff;
+    align-items: center;
+  }
+  
+  body {
     margin: 0;
-}
-main {
-    margin-top: 74px;
-}
-
-#menu-header {
+  }
+  
+  main {
+    margin-top: 15%;
+  }
+  
+  #menu-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 60px ;
-}
-
-.logo {
+    padding: 10px 60px;
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+  }
+  
+  .logo {
     margin: 0;
-}
-
-.logo img {
+    display: flex;
+    align-self: center;
+  }
+  
+  .logo img {
     height: 50px;
-}
-
-.nav-links {
+  }
+  
+  .nav-links {
     display: flex;
     padding: 0;
     margin: 0;
     list-style: none;
-}
-
-.nav-links a {
+    align-items: center;
+    justify-content: space-evenly;
+    width: 35%;
+  }
+  
+  .button {
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
     font-weight: bold;
-    font-size: 16px;
-    margin-left: 20px;
-}
-
-.nav-links a:hover {
-    color: orange;
-}
+  }
+  
+  .button:hover {
+    color: #fabc1d;
+  }
+  
+  .cta {
+    background-color: #f15d49;
+    color: #ffffff;
+    padding: 5px 25px;
+    text-decoration: none;
+    border: 3px solid black;
+    border-radius: 12px;
+  }
+  
+  .cta:hover {
+    color: rgb(0, 0, 0);
+  }
