--- a/contact.scss
+++ b/contact.scss
@@ -4,6 +4,9 @@ $color3: #ffffff;//#479e9c;
 $color4: #f15d49;
 $color5: #ffffff;
 body {
+    main {
+        margin-top: 15%;
+    }
     background-color: $color1;
     .formulaire__container {
         .formulaire__bottom {
@@ -32,7 +35,7 @@ body {
                         font-size: 50px;
                     }
                     .paragrapheTitle {
-                        width: 85%;
+                        width: 90%;
                         margin: 0;
                         text-align: center;
                         font-family: "Poppins", sans-serif;
