--- a/galerie.css
+++ b/galerie.css
@@ -45,6 +45,7 @@ main {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
+  text-align: center;
 }
 
 body {
@@ -154,4 +155,13 @@ body {
   margin-top: 20px;
   gap: 20px;
   margin-bottom: 200px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 912px) {
+  body {
+    margin-top: 150px;
+  }
+  .container-titre {
+    width: 100%;
+  }
 }/*# sourceMappingURL=galerie.css.map */
