--- a/galerie.scss
+++ b/galerie.scss
@@ -50,6 +50,7 @@ main{
         font-family: "Poppins", sans-serif;
         font-weight: 400;
         font-style: normal;
+        text-align: center;
     }
 }
 body{
@@ -161,4 +162,13 @@ body{
     margin-bottom: 200px;
 }
 
-   
+@media only screen 
+and (min-device-width: 375px) 
+and (max-device-width: 912px)  {
+    body{
+        margin-top: 150px;
+    }
+    .container-titre{
+        width: 100%;
+    }
+}
