--- a/item.scss
+++ b/item.scss
@@ -153,6 +153,9 @@ main {
 
     }
 }
+footer {
+    margin-top: 25px;
+}
 @media only screen 
 and (min-device-width: 375px) 
 and (max-device-width: 912px)  { 
